# mcp_ingestion_framework

./: .gitignore  README.md  pyproject.toml
mcp_context/: .gitignore
scripts/: chat_openai.py  run.py
src/mcp_ingestion/: __init__.py  agents.py  config.py  context.py  models.py  openai_orchestrator.py  pipeline.py
tests/: test_databricks_connection.py  test_schema_drift.py
